--- a/store-conf/conf/msgs/ZsMsg_vi.properties
+++ b/store-conf/conf/msgs/ZsMsg_vi.properties
@@ -412,7 +412,7 @@ zimbra_gid = \
   Gid c\u1ee7a zimbra unix trong \u0111\u00f3 quy tr\u00ecnh m\u00e1y ch\u1ee7 Zimbra ph\u1ea3i chuy\u1ec3n \
   \u0111\u1eb7c quy\u1ec1n sang, sau khi k\u1ebft n\u1ed1i c\u00e1c c\u1ed5ng \u0111\u01b0\u1ee3c \u01b0u ti\u00ean.
 zimbra_log4j_properties = \u0110\u01b0\u1eddng d\u1eabn t\u1edbi t\u1eadp tin thu\u1ed9c t\u00ednh c\u1ea5u h\u00ecnh log4j.
-zimbra_log4j_properties_watch = Kho\u1ea3ng xem cho t\u1eadp tin thu\u1ed9c t\u00ednh c\u1ea5u h\u00ecnh log4j t\u00ednh b\u1eb1ng miligi\u00e2y..
+zimbra_log4j_properties_watch = Kho\u1ea3ng xem cho t\u1eadp tin thu\u1ed9c t\u00ednh c\u1ea5u h\u00ecnh log4j t\u00ednh b\u1eb1ng miligi\u00e2y.
 zimbra_attrs_directory = \
   Th\u01b0 m\u1ee5c c\u00f3 ch\u1ee9a t\u1eadp tin *.xml d\u00f9ng \u0111\u1ec3 ch\u1ec9 \u0111\u1ecbnh c\u00fa ph\u00e1p cho c\u00e1c thu\u1ed9c t\u00ednh LDAP \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng b\u1edfi h\u1ec7 th\u1ed1ng
 localized_msgs_directory = Th\u01b0 m\u1ee5c l\u01b0u c\u00e1c tin th\u00f4ng b\u00e1o \u0111\u01b0\u1ee3c b\u1ea3n \u0111\u1ecba h\u00f3a.
@@ -421,7 +421,7 @@ skins_directory = Th\u01b0 m\u1ee5c l\u01b0u giao di\u1ec7n.
 zimbra_store_sweeper_max_age = \
   C\u00e1c t\u1eadp tin l\u00e2u h\u01a1n t\u1eadp tin n\u00e0y s\u1ebd t\u1ef1 \u0111\u1ed9ng b\u1ecb x\u00f3a kh\u1ecfi th\u01b0 m\u1ee5c \u0111\u1ebfn c\u1ee7a kho l\u01b0u tr\u1eef.
 zimbra_store_copy_buffer_size_kb = C\u00e1c thao t\u00e1c sao ch\u00e9p t\u1eadp tin s\u1eed d\u1ee5ng b\u1ed9 \u0111\u1ec7m thu\u1ed9c k\u00edch th\u01b0\u1edbc n\u00e0y
-zimbra_mailbox_galsync_cache = Thi\u1ebft l\u1eadp b\u1ed9 nh\u1edb \u0111\u1ec7m m\u1ee5c s\u1ed1 li\u00ean h\u1ec7 c\u1ee7a h\u1ed9p th\u01b0 \u0111\u1ed3ng b\u1ed9 h\u00f3a gal l\u1edbn nh\u1ea5t.. \
+zimbra_mailbox_galsync_cache = Thi\u1ebft l\u1eadp b\u1ed9 nh\u1edb \u0111\u1ec7m m\u1ee5c s\u1ed1 li\u00ean h\u1ec7 c\u1ee7a h\u1ed9p th\u01b0 \u0111\u1ed3ng b\u1ed9 h\u00f3a gal l\u1edbn nh\u1ea5t. \
   \u0110\u1eb7t gi\u00e1 tr\u1ecb \u1edf m\u1ee9c t\u1ed1i thi\u1ec3u l\u00e0 s\u1ed1 l\u01b0\u1ee3ng c\u00e1c m\u1ee5c s\u1ed1 li\u00ean h\u1ec7 trong h\u1ed9p th\u01b0 \u0111\u1ed3ng b\u1ed9 h\u00f3a gal.
 zimbra_mailbox_manager_hardref_cache = \
   S\u1ed1 l\u01b0\u1ee3ng h\u1ed9p th\u01b0 t\u1ed1i \u0111a s\u1ebd \u0111\u01b0\u1ee3c ghim v\u00e0o b\u1ed9 nh\u1edb tr\u01b0\u1edbc khi \
